fix icon spacing on mobile view

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -4,12 +4,6 @@
   padding: 0;
 }
 
-body {
-  overflow-x: hidden;
-  width: 100%;
-  max-width: 100vw;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -25,7 +19,7 @@ html {
   display: flex;
   justify-content: center;
   box-sizing: border-box;
-  min-width: 280px;
+  min-width: 320px;
 }
 
 .burger {
@@ -40,8 +34,6 @@ html {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  max-width: 100vw;
-  overflow-x: hidden;
 }
 
 .top-logo {
