--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -51,8 +51,29 @@ ul {
   }
 }
 
+/* Reduce icon size to have multiple in a row on mobile  */
+@media only screen and (max-width: 415px) {
+  .skill-icons {
+    margin: 25px; 
+    width: 80px; 
+    height: 80px;
+  }
+
+  .skillContainer {
+    margin: 10px 5px;
+}
+
 .Skills {
-  padding-top: 40px;
-  margin-top: -70px;
+  padding-top: 70px;
+  margin-top: 0;
   min-height: 100vh;
+  height: 100vh;
+  overflow-y: auto;
+}
+
+@media only screen and (max-width: 360px) {
+  .Skills {
+    padding-top: 60px;
+  }
+}
 }
